assets/css/style.css
* {
    margin: 0;
    padding: 0;
}


.row {
    margin-right: 0;
}

/*----Nav bar----*/

#collapse-button {
    width: auto;
}

#navbarTogglerDemo02 {
    justify-content: space-between;
}

#nav-list {
    display: flex;
    justify-content: center;
}

#nav-basket>i {
    float: right;
}

/*-----Hero section----*/

#hero-section {
    --bs-gutter-x: 0;
    background-image: url(../images/hero-placeholder.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 500px;
}

#hero-text {
    height: 200px;
    top: 150px;
    position: relative;
    align-content: center;
    background-color: white;
}


/*----Home About Section----*/
#home-about-heading {
    margin-top: 5rem;
}



/*----Home Form Section----*/
#home-contact-form {
    width: 75%;
}


/*----About footer image----*/
#about-footer-image {
    height: 300px;
    background-image: url(../images/hero-placeholder.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}


/*----History Image Section----*/
.history-image {
    max-width: 100%;
    height: auto;
    display: block;
    padding: 20px;
}

.history-paragraph {
    padding: 20px;
}


/*----Contact Details----*/
.contact-details-p {
    margin-bottom: 0;
}

#contact-details {
    width: 75%;
}


/*----Footer----*/
footer {
    margin: 10px 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#social-links {
    display: flex;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

#social-links>li {
    margin: 0 5px;
}


/*----Media Queries----*/

@media (max-width: 992px) {

    /*----Collapsed nav-bar----*/
    #nav-basket>i {
        float: none;
    }

    #navbarTogglerDemo02 {
        flex-direction: column;
        align-items: flex-start;
        margin-left: 0.2rem;
    }

    /*----Home Contact Form----*/
    #home-contact-form {
        margin-left: 0;

    }

    #home-contact-form-inputs {
        flex-direction: column;
    }

    #home-text-area-input, 
    #home-personal-details-inputs {
        margin-left: 0 !important;
        margin-right: 0 !important;
    }

    /*----About Cards----*/
    .about-card {
        width: 50%;
    }

}

